Upload 2.4.7-2+4 to unstable

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ppp (2.4.7-2+4) UNRELEASED; urgency=medium
+ppp (2.4.7-2+4) unstable; urgency=medium
 
   * Update EAP-TLS patch to version 1.102. (Closes: #912822)
 
- -- Chris Boot <bootc@debian.org>  Sun, 04 Nov 2018 12:43:35 +0000
+ -- Chris Boot <bootc@debian.org>  Sun, 04 Nov 2018 12:56:54 +0000
 
 ppp (2.4.7-2+3) unstable; urgency=high
 
